--- a/pages/research.html
+++ b/pages/research.html
@@ -57,7 +57,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('/mj_11237_2.jpg') no-repeat center center/cover;
+            background: url('mj_11237_2.jpg') no-repeat center center/cover;
             filter: blur(4px);
             z-index: -1;
         }
