--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <a href="/index.html">Home</a>
             </div>
             <div class="navbar-content">
-            <a href="pages/research.html">Research</a>
-            <a href="pages/design.html">Design</a>
-            <a href="pages/sketches.html">Sketches</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/research.html">Research</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/design.html">Design</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/sketches.html">Sketches</a>
         </div>
         </div>
     </div>
