--- a/pages/design.html
+++ b/pages/design.html
@@ -57,7 +57,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('mj_11237_2.jpg') no-repeat center center/cover;
+            background: url('https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/mj_11237_2.jpg') no-repeat center center/cover;
             filter: blur(4px);
             z-index: -1;
         }
@@ -98,9 +98,9 @@
             <a href="/index.html">Home</a>
             </div>
             <div class="navbar-content">
-            <a href="/pages/research.html">Research</a>
-            <a href="/pages/design.html">Design</a>
-            <a href="/pages/sketches.html">Sketches</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/research.html">Research</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/design.html">Design</a>
+            <a href="https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/pages/sketches.html">Sketches</a>
         </div>
         </div>
     </div>
