--- a/design.html
+++ b/design.html
@@ -1,6 +1,5 @@
 <head>
-    <script src="/main.js"></script>
-    <link rel="stylesheet" href="ui.css">
+    <link rel="stylesheet" href="/ui.css">
     <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
     <style>
         body {
@@ -57,7 +56,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/background-1.png') no-repeat center center/cover;
+            background: url('https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/mj_11237_2.jpg') no-repeat center center/cover;
             filter: blur(4px);
             z-index: -1;
         }
@@ -90,14 +89,16 @@
 </head>
 <body>
     <div class="navbar">
+     
 
     </div>
 
     <div class="centre">
-        <p>Engineering 2025 - Transport</p>
+        <p>Design</p>
     </div>
     <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
     <p class="main">We made the car.</p>
     <p class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem illo illum error officiis sit, dolor cupiditate tempore consequuntur necessitatibus eveniet! Nesciunt, earum? Neque itaque deserunt repudiandae deleniti veritatis eveniet accusamus possimus ut porro ipsa consequuntur ducimus omnis laborum veniam, aliquid amet, quaerat vero dolorum perspiciatis ex quisquam, ad autem. Harum autem dicta repellat labore aspernatur iure distinctio vero voluptas, nobis adipisci molestiae aliquam delectus temporibus beatae id omnis sequi quasi voluptatem cumque natus perspiciatis necessitatibus commodi. Dolore at aspernatur impedit amet fugiat distinctio asperiores modi consequuntur, enim nulla harum eius inventore provident numquam ex excepturi temporibus fuga quaerat cupiditate! Laudantium consectetur possimus ad, quas magnam mollitia eos, nemo, labore quam quia voluptatum perspiciatis quae at illum reiciendis dolor! Culpa voluptatibus distinctio dicta temporibus ullam, expedita nihil, accusantium molestias quod sapiente iure minima eum. Quisquam reiciendis a sed labore repellat harum cum maiores exercitationem illum fuga, amet minima debitis id nemo ea modi laboriosam esse officiis delectus commodi. Nulla quia veritatis velit unde commodi ipsa illum tempora itaque. Dignissimos placeat quis, inventore minima atque corrupti perspiciatis dolorem, ea incidunt doloremque voluptatem reiciendis qui odit doloribus, eum error eligendi culpa. Aperiam laborum animi nihil impedit molestias libero pariatur quos neque. Consequuntur, ea dolorum tenetur adipisci, vel saepe illo tempora perspiciatis dolore iure qui! Illum nulla deserunt itaque! Optio eum sed, quos autem ea aliquid quasi? Deserunt similique enim ipsum fugit minima fuga ipsa quasi neque saepe unde laborum voluptates quidem ad assumenda eos deleniti quod quis dolores dolorum eius corporis, adipisci ipsam dicta recusandae! Totam a necessitatibus minima voluptas aut voluptates sit suscipit soluta assumenda architecto ratione similique eius nobis, quae reiciendis dolorum laudantium illo ipsam dolore aspernatur ex dignissimos saepe reprehenderit. Ad sapiente provident exercitationem, modi officia recusandae quidem praesentium cupiditate quibusdam, dicta suscipit corporis omnis vitae quos nobis consectetur culpa laudantium voluptates laboriosam incidunt! Dolor perspiciatis quas culpa et saepe corrupti exercitationem maxime, dignissimos, in, ad a debitis optio possimus. Amet mollitia ipsum illum veniam vitae exercitationem consequuntur facere voluptatibus eveniet quos quae labore necessitatibus quasi quaerat non est laudantium perspiciatis, porro totam earum cumque ipsam enim minima consequatur. Iusto sit animi officiis voluptas esse, magni explicabo numquam. Fugit sit at a id consequatur fugiat ipsam accusamus aut commodi dolor saepe tenetur quaerat reprehenderit dicta sed dolores laboriosam nihil, veniam omnis consequuntur nam voluptate sapiente rem! Neque laboriosam beatae, amet autem veritatis ipsa, cumque perspiciatis maiores obcaecati culpa velit esse quae voluptatum! Voluptatem consectetur cumque quod ut dolorem non eligendi illum voluptas, tempora rem exercitationem quo corporis! Nostrum magni delectus, ipsum ullam earum accusantium tempore itaque cupiditate architecto ratione et molestiae, magnam vel! Quos dolorem perspiciatis natus officiis quaerat iusto incidunt veniam nihil consectetur dolorum doloribus, veritatis facere mollitia voluptatem reiciendis sunt quasi dolor sint sequi ullam dicta ea! Provident molestias, illo error quos odio, officiis tempore optio autem ex corporis temporibus voluptatem dolorum id ipsa esse mollitia quis atque exercitationem. Dolor aut quis aliquam quidem, laborum eius reprehenderit praesentium vitae, officiis repellat ea reiciendis autem minima nostrum ipsam quaerat.</p>
+
     <script src="/navbar.js"></script>
 </body>
