--- a/research.html
+++ b/research.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/ui.css">
+    <link rel="stylesheet" href="ui.css">
     <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
     <style>
         body {
