--- a/navbar.html
+++ b/navbar.html
@@ -5,6 +5,6 @@
     <div class="navbar-content">
         <a href="research.html">Research</a>
         <a href="design.html">Design</a>
-        <a href="sketches.html">Sketches</a>
+        <a href="bibliography.html">Bibliography</a>
     </div>
 </div>
