--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="ui.css">
     <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
 </head>
+
 <body>
     <div class="navbar">
 
@@ -12,6 +13,105 @@
         <p>Engineering 2025 - Transport</p>
     </div>
     <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
-    <p class="main">The task is to conceptualize, design and build a propeller powered small scale dragster using sustainable and recycled materials. The dragster must use a propeller (no more than 200mm in diameter) that is made from aluminium drink cans. It will be powered by a 3V electric motor. The car's chassis and structure will be made from sustainable and recycled materials. The goal is to make the car move 3 meters in at least 5 seconds.<br><br><a href="design.html" style="color: white !important;">Click here to view the design</a><br></p>
+
+    <p class="subtitle">ASSESSMENT TASK 1 - Propeller Dragster</p>
+    <p class="subtitle" style="font-size: 120%;">By Ames, Wutti and Cisco
+        <br>Teacher: Ms Bean
+    </p>
+    <p class="main">
+
+        The task is to conceptualise, design and build a propeller powered small scale dragster using sustainable and
+        recycled materials. The dragster must use a propeller (no more than 200mm in diameter) that will be made from
+        aluminium drink cans. It will be powered by a 3V electric motor. The car's chassis and structure will be made
+        from sustainable and recycled materials. The goal is to make the car move 3 meters in at least 5 seconds.
+        <br><br>
+        </p>
+        <p class="subtitle">Criteria for Success</p>
+            <p class="main">
+
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <label for="vehicle1"> The propeller must be made out of an aluminum drink can with a tip to tip diameter that
+            is no larger than 200mm.</label><br><br>
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+        <label for="vehicle2"> The propeller should be able to adequately propel the dragster enough to meet the 5
+            second track time.</label><br><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> The assembled dragster must not be larger than the specific dimensions of 225 x 310 x
+            240mm.</label><br><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> The dragster should be able to complete at least five trials over a 3 meter track, in at
+            least 5 seconds. </label><br><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> The dragster should drive in a straight line at high speeds.</label><br><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> Materials used should be recycled from other purposes and have attributes that positively
+            benefit the speed and performance of the car.</label><br><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> The car must be able to withstand shocks and impacts and retain its shape.</label> <br>
+        <br>
+
+        </label>
+</p>
+    <p class="subtitle">Design Brief</p>
+
+    <ul>
+        
+        <li>You will design, construct, and evaluate a wind dragster while exploring principles of structures,
+            aerodynamics, and emerging technologies in transport.</li>
+        <li>You will create a website that outlines the design process you have gone through to construct your wind
+            dragster.</li>
+        <li>You will undertake research into new and emerging technologies in public and personal transport and how
+            those transport options are powered. You will include this information in your website.</li>
+    </ul>
+    </p>
+        <p class="subtitle">Task Outline</p>
+        <p class="subtitle">Part 1</p>
+    
+        <ul>
+        <li>You are required to design and construct a wind dragster using a propeller to propel your dragster. The dragster must have a propeller built from drink can aluminum with a tip-to-tip diameter of no more than 200mm. You will be given a 3V electric motor, wires, two skewers, and a switch. All other materials must be supplied by using recycled materials from around the house or school for example, bottle top lids, aluminum cans, plastic cups, etc. Dimensions of the dragster are not to exceed 225x310x240mm when assembled. </li>
+        <li>Your dragster must complete multiple timed runs over a smooth track for 3.0 metres. You will need to include tables of your data. You should conduct at least two sets of timed trials with modifications and changes discussed between each set of trials. Each set should aim to have a minimum of five trials.
+          </ul>
+        <p class="subtitle">Part 2</p>
+        <ul>
+        <li>Your portfolio, presented on your website, should include concept sketches done by hand with alterations and annotations showing when changes have been made. Trials of different propeller designs should be included and may result in changes to your concept sketches.
+</li>
+        <li>A diagram of the electric circuit that you use for your dragster- this can be done either by hand or as a CAD drawing.</li>
+                <li>A design brief and criteria for success.</li>
+        <li>Research into different types of propellers and why you chose the design that you did. Your drawings should also include information on the parts of a propeller and the forces that act on a propeller.</li>
+         <li>A Gantt chart outlining when you hope to complete different parts of your project and when you did actually complete parts of your project.</li>
+         <li>Document any failures or challenges you face and how you resolved those issues. If you did not resolve those issues, document why and what you may be able to do in the future.</li>
+         <li>CAD drawings of your final design including top, front, side, and orthographic projection.</li>
+         <li>A discussion on stability, weight distribution, and aerodynamics and how these impact your design.</li>
+         <li>A budget of any parts that you have bought. If you consumed a drink and then used the bottle etc you will need to include that in your budget etc. If you purchase recycled materials, they need to be included in your budget.</li>
+         <li>A section on the materials you used and why the properties of those materials made them good choices for your design. Concepts that may be important include ductility, malleability, weight-to-strength ratio, strength, aerodynamics, etc.</li>
+         <li>If you re-use any specific items make sure that you include a photo of those items as they were originally on your previous item. If possible, bring the item into class and photograph the process of making the changes.</li>
+         <li>Photos of your process and documentation of the steps used to construct your dragster.</li>
+         <li>WHS concerns and appropriate measures that were taken to minimise risks.</li>
+         <li>An evaluation of your dragster in terms of your criteria for success, how your dragster performed, what criteria were met, what was not, and areas for improvement if you were to do the project again.</li>
+         <li>A reflection on how you and your partner worked together, what worked well, what could have been improved, and who took on which roles.</li>
+        <p class="subtitle">Part 3</p>
+
+        </ul>
+                <ul>
+
+         <li>A Front page with an introduction and hyperlinks to multiple pages within the website.</li>
+                  <li>A section analysing one future personal mode of transport and one public mode of transport. You will need to investigate an emerging technology in power for each of your future sources of transport, for example emerging technologies in batteries and/ or fuel.
+</li>
+         <li>Hyperlinks to your portfolio - part 2.
+</li>
+         <li>An appropriate Bibliography
+</li>
+         <li>A presentation of no more than 5 minutes of your website and the process that you undertook for this project.
+</li>
+
+        </ul>
+
+
+
+
+
+
+              <br><br><a href="overview.html" style="color: white !important; margin: 20px; font-size: 40px; text-align: center; font-family: 'Nunito', sans-serif; font-weight: bold;     display: block; margin-block-start: 1em; margin-block-end: 1em; margin-inline-start: 0px; margin-inline-end: 0px; unicode-bidi: isolate;">Click here to read the Overview</a><br>
+
     <script src="navbar.js"></script>
 </body>
