--- a/navbar.html
+++ b/navbar.html
@@ -3,6 +3,7 @@
         <a href="index.html">Home</a>
     </div>
     <div class="navbar-content">
+        <a href="overview.html">Overview</a>
         <a href="research.html">Research</a>
         <a href="design.html">Design</a>
         <a href="bibliography.html">Bibliography</a>
