--- a/research.html
+++ b/research.html
@@ -1,19 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
     <link rel="stylesheet" href="ui.css">
-    <title>Propeller Car Research - Engineering Wutthi Cisco Ames</title>
+    <script src="/main.js"></script>
 </head>
-<body>
-    <div class="navbar">
-     
 
-    </div>
+<body>
+    <div class="navbar"></div>
 
     <div class="centre">
-        <p>Research</p>
+        <p>Overview</p>
     </div>
+
     <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
-    <p class="main">We made the car.</p>
-    <p class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem illo illum error officiis sit, dolor cupiditate tempore consequuntur necessitatibus eveniet! Nesciunt, earum? Neque itaque deserunt repudiandae deleniti veritatis eveniet accusamus possimus ut porro ipsa consequuntur ducimus omnis laborum veniam, aliquid amet, quaerat vero dolorum perspiciatis ex quisquam, ad autem. Harum autem dicta repellat labore aspernatur iure distinctio vero voluptas, nobis adipisci molestiae aliquam delectus temporibus beatae id omnis sequi quasi voluptatem cumque natus perspiciatis necessitatibus commodi. Dolore at aspernatur impedit amet fugiat distinctio asperiores modi consequuntur, enim nulla harum eius inventore provident numquam ex excepturi temporibus fuga quaerat cupiditate! Laudantium consectetur possimus ad, quas magnam mollitia eos, nemo, labore quam quia voluptatum perspiciatis quae at illum reiciendis dolor! Culpa voluptatibus distinctio dicta temporibus ullam, expedita nihil, accusantium molestias quod sapiente iure minima eum. Quisquam reiciendis a sed labore repellat harum cum maiores exercitationem illum fuga, amet minima debitis id nemo ea modi laboriosam esse officiis delectus commodi. Nulla quia veritatis velit unde commodi ipsa illum tempora itaque. Dignissimos placeat quis, inventore minima atque corrupti perspiciatis dolorem, ea incidunt doloremque voluptatem reiciendis qui odit doloribus, eum error eligendi culpa. Aperiam laborum animi nihil impedit molestias libero pariatur quos neque. Consequuntur, ea dolorum tenetur adipisci, vel saepe illo tempora perspiciatis dolore iure qui! Illum nulla deserunt itaque! Optio eum sed, quos autem ea aliquid quasi? Deserunt similique enim ipsum fugit minima fuga ipsa quasi neque saepe unde laborum voluptates quidem ad assumenda eos deleniti quod quis dolores dolorum eius corporis, adipisci ipsam dicta recusandae! Totam a necessitatibus minima voluptas aut voluptates sit suscipit soluta assumenda architecto ratione similique eius nobis, quae reiciendis dolorum laudantium illo ipsam dolore aspernatur ex dignissimos saepe reprehenderit. Ad sapiente provident exercitationem, modi officia recusandae quidem praesentium cupiditate quibusdam, dicta suscipit corporis omnis vitae quos nobis consectetur culpa laudantium voluptates laboriosam incidunt! Dolor perspiciatis quas culpa et saepe corrupti exercitationem maxime, dignissimos, in, ad a debitis optio possimus. Amet mollitia ipsum illum veniam vitae exercitationem consequuntur facere voluptatibus eveniet quos quae labore necessitatibus quasi quaerat non est laudantium perspiciatis, porro totam earum cumque ipsam enim minima consequatur. Iusto sit animi officiis voluptas esse, magni explicabo numquam. Fugit sit at a id consequatur fugiat ipsam accusamus aut commodi dolor saepe tenetur quaerat reprehenderit dicta sed dolores laboriosam nihil, veniam omnis consequuntur nam voluptate sapiente rem! Neque laboriosam beatae, amet autem veritatis ipsa, cumque perspiciatis maiores obcaecati culpa velit esse quae voluptatum! Voluptatem consectetur cumque quod ut dolorem non eligendi illum voluptas, tempora rem exercitationem quo corporis! Nostrum magni delectus, ipsum ullam earum accusantium tempore itaque cupiditate architecto ratione et molestiae, magnam vel! Quos dolorem perspiciatis natus officiis quaerat iusto incidunt veniam nihil consectetur dolorum doloribus, veritatis facere mollitia voluptatem reiciendis sunt quasi dolor sint sequi ullam dicta ea! Provident molestias, illo error quos odio, officiis tempore optio autem ex corporis temporibus voluptatem dolorum id ipsa esse mollitia quis atque exercitationem. Dolor aut quis aliquam quidem, laborum eius reprehenderit praesentium vitae, officiis repellat ea reiciendis autem minima nostrum ipsam quaerat.</p>
+
+    <div class="grid">
+
+        <p class="main-left">
+            <table>
+                <tr>
+                    <th>Low Pitch (of blades)</th>
+                    <th>High Pitch</th>
+                </tr>
+                <tr>
+                    <td>
+                        Results in higher rotational speeds but lower forward speed.<br>
+                        Increases efficiency at low speeds.<br>
+                        Causes inefficiency at high speeds.
+                    </td>
+                    <td>
+                        Results in lower rotational speeds but achieves higher forward speed.<br>
+                        Increases efficiency at higher speeds.<br>
+                        Reduces acceleration or low-speed thrust, making it harder to accelerate.
+                    </td>
+                </tr>
+            </table><br><br>
+
+            One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical takeoff and landing (eVTOL) vehicles. eVTOL's aim is to completely remove the issue of traffic and fly at a conveniently fast speed, while remaining affordable enough for the average person. eVTOL's, while seeming futuristic and far-fetched, have had many advancements recently. On the 11th of March 2025, an eVTOL company named AVIC tested two new aircraft. Sources say it will have completed its maiden flight by the end of 2025. eVTOLs use high-density solid-state batteries to contain large amounts of energy in a small and light area. These new batteries charge fast, weigh less, last longer, and are much safer.
+
+            <br><br>
+
+            In the public transport sector, new technology for hydrogen-powered trains has been explored. New PEM (proton-exchange membrane) fuel cells have been developed for the trains. These fuel cells are able to contain much denser amounts of hydrogen in the same space, making the hydrogen route much more viable. One of the major drawbacks to hydrogen fuel is its tendency to explode and catch fire, causing much devastation. This new type of fuel cell drastically improves the safety of the cell while improving efficiency.
+        </p>
+
+        <img class="img-left" src="images/propeller-diagram.png" alt="Propeller Diagram">
+        <img class="img-left" src="images/propeller.png" alt="Propeller Image">
+
+    </div>
 
     <script src="navbar.js"></script>
 </body>
+</html>
