--- a/research.html
+++ b/research.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
@@ -11,45 +12,56 @@
     <div class="navbar"></div>
 
     <div class="centre">
-        <p>Overview</p>
+        <p>Research</p>
     </div>
 
     <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
+    <br id="propeller">
+    <p class="subtitle">Propeller Design</p>
+    <table>
+        <tr>
+            <th>Low Pitch (of blades)</th>
+            <th>High Pitch</th>
+        </tr>
+        <tr>
+            <td>
+                Results in higher rotational speeds but lower forward speed.<br>
+                Increases efficiency at low speeds.<br>
+                Causes inefficiency at high speeds.
+            </td>
+            <td>
+                Results in lower rotational speeds but achieves higher forward speed.<br>
+                Increases efficiency at higher speeds.<br>
+                Reduces acceleration or low-speed thrust, making it harder to accelerate.
+            </td>
+        </tr>
+    </table><br><br>
+    <p class="main">
 
-    <div class="grid">
+        One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical
+        takeoff and landing (eVTOL) vehicles. eVTOL's aim is to completely remove the issue of traffic and fly at a
+        conveniently fast speed, while remaining affordable enough for the average person. eVTOL's, while seeming
+        futuristic and far-fetched, have had many advancements recently. On the 11th of March 2025, an eVTOL company
+        named AVIC tested two new aircraft. Sources say it will have completed its maiden flight by the end of 2025.
+        eVTOLs use high-density solid-state batteries to contain large amounts of energy in a small and light area.
+        These new batteries charge fast, weigh less, last longer, and are much safer.
 
-        <p class="main-left">
-            <table>
-                <tr>
-                    <th>Low Pitch (of blades)</th>
-                    <th>High Pitch</th>
-                </tr>
-                <tr>
-                    <td>
-                        Results in higher rotational speeds but lower forward speed.<br>
-                        Increases efficiency at low speeds.<br>
-                        Causes inefficiency at high speeds.
-                    </td>
-                    <td>
-                        Results in lower rotational speeds but achieves higher forward speed.<br>
-                        Increases efficiency at higher speeds.<br>
-                        Reduces acceleration or low-speed thrust, making it harder to accelerate.
-                    </td>
-                </tr>
-            </table><br><br>
+        <br><br>
 
-            One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical takeoff and landing (eVTOL) vehicles. eVTOL's aim is to completely remove the issue of traffic and fly at a conveniently fast speed, while remaining affordable enough for the average person. eVTOL's, while seeming futuristic and far-fetched, have had many advancements recently. On the 11th of March 2025, an eVTOL company named AVIC tested two new aircraft. Sources say it will have completed its maiden flight by the end of 2025. eVTOLs use high-density solid-state batteries to contain large amounts of energy in a small and light area. These new batteries charge fast, weigh less, last longer, and are much safer.
+        In the public transport sector, new technology for hydrogen-powered trains has been explored. New PEM
+        (proton-exchange membrane) fuel cells have been developed for the trains. These fuel cells are able to contain
+        much denser amounts of hydrogen in the same space, making the hydrogen route much more viable. One of the major
+        drawbacks to hydrogen fuel is its tendency to explode and catch fire, causing much devastation. This new type of
+        fuel cell drastically improves the safety of the cell while improving efficiency.
+        <a href="design.html">Click here to read about the Design</a>
+    </p>
 
-            <br><br>
-
-            In the public transport sector, new technology for hydrogen-powered trains has been explored. New PEM (proton-exchange membrane) fuel cells have been developed for the trains. These fuel cells are able to contain much denser amounts of hydrogen in the same space, making the hydrogen route much more viable. One of the major drawbacks to hydrogen fuel is its tendency to explode and catch fire, causing much devastation. This new type of fuel cell drastically improves the safety of the cell while improving efficiency.
-        </p>
-
-        <img class="img-left" src="images/propeller-diagram.png" alt="Propeller Diagram">
-        <img class="img-left" src="images/propeller.png" alt="Propeller Image">
+    <img class="img-left" src="images/propeller-diagram.png" alt="Propeller Diagram">
+    <img class="img-left" src="images/propeller.png" alt="Propeller Image">
 
     </div>
 
     <script src="navbar.js"></script>
 </body>
+
 </html>
