--- a/design.html
+++ b/design.html
@@ -25,10 +25,10 @@
   </p>
   <img src="Design/concept-sketches.png">
   <p class="subtitle">CAD Drawings</p>
-    <p class="main" style="text-align: center;">
+  <p class="main" style="text-align: center;">
     Made with Onshape
   </p>
-    <!--<div class="grid">
+  <!--<div class="grid">
             <p class="main-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit excepturi est fuga nostrum facilis ipsa fugit quas
     eius sapiente, voluptate mollitia tempore reiciendis cupiditate quos sit sunt suscipit cumque eaque nam ex quidem
     deleniti voluptatem temporibus! Ad beatae ab libero, cupiditate quisquam quis rerum excepturi quo quasi est soluta
@@ -37,18 +37,20 @@
             </p>
       </table> -->
 
-    <img class="img-left" src="Design/cad.png">
+  <img class="img-left" src="Design/cad.png">
 
-</div> 
+  </div>
   <p class="subtitle">Circuit Diagram</p>
-      <p class="main" style="text-align: center;">
-    Diagram of the simple electric circuit, featuring:<br> a Power Supply (AA Battery Pack), a Load (Motor), and a Switch
+  <p class="main" style="text-align: center;">
+    Diagram of the simple electric circuit, featuring:<br> a Power Supply (AA Battery Pack), a Load (Motor), and a
+    Switch
   </p>
   <img src="Design/wiring.png" style="width: 200px;">
   <p class="main">
     <a href="research.html#propeller">Click here to read about the Propeller Design</a>
-  </p>
+        <a href="results.html">Click here to read about the Results</a>
 
+  </p>
 
 
   <script src="navbar.js"></script>
