--- a/overview.html
+++ b/overview.html
@@ -50,7 +50,7 @@
             <p class="subtitle">Gantt Chart</p>
            <p class="main" style="    background-color: transparent !important;"> 
            <a target="_blank" href="https://docs.google.com/spreadsheets/d/1LPLCaoHC56INkIJ_I7hm5YNAg27AWWYt/edit?usp=sharing&ouid=109511729124599648716&rtpof=true&sd=true">Click here to view the Gantt Chart</a>
-           <a href="research.html">Click here to read the Research</a>
+           <br><a href="research.html">Click here to read the Research</a>
 
            <br>
 </p>
