--- a/navbar.html
+++ b/navbar.html
@@ -6,6 +6,7 @@
         <a href="overview.html">Overview</a>
         <a href="research.html">Research</a>
         <a href="design.html">Design</a>
+        <a href="results.html">Results</a>
         <a href="bibliography.html">Bibliography</a>
     </div>
 </div>
